--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script type="text/javascript" src="core/script/cfg.js"></script>
 		<script>var AG_GAME = false;</script>
         <script type="text/javascript" src="core/script/sall.js"></script>
-        <title>星系核心:地平线 - Heart Of Galaxy : Horizons</title>
+        <title>Heart Of Galaxy : Horizons</title>
     </head>
     <body id="hog_game_body" ondragstart="return false;" ondrop="return false;">
 <script src="chs.js"></script>
@@ -512,22 +512,6 @@
 			kongregate.mtx.showIncentivizedAd();
 		}
 		</script>
-<!--客服 开始-->
-<link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//g8hh.github.io/static/js/kf.js"></script>
-<!-- 客服 结束 -->
-<!--站长统计--> 
-<div style="display: none">
-    <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?028b1b5f659ed138230f4cafd7ad0dfc";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-    </div>
 	<style>
 		#shipyard_info_list .blue_text, 
 		#shipyard_info_list .red_text, 
